tests/compile_fail/password_display.rs
fn main() {
    let p = taolk::secret::Password::new("hunter2".to_string());
    println!("{p}");
}
