tests/compile_fail/password_display.stderr
error[E0277]: `Password` doesn't implement `std::fmt::Display`
 --> tests/compile_fail/password_display.rs:3:15
  |
3 |     println!("{p}");
  |               ^^^ `Password` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Password`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
